--- a/TS-forBlockchain/typechain/tsconfig.json
+++ b/TS-forBlockchain/typechain/tsconfig.json
@@ -2,6 +2,9 @@
   "include": ["src"],
   "compilerOptions": {
     "outDir": "build",
-    "target": "es6"
+    "esModuleInterop": true,
+    "target": "es6",
+    "lib": ["es6"],
+    "strict": true
   }
 }
