--- a/TS-forBlockchain/typechain/tsconfig.json
+++ b/TS-forBlockchain/typechain/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
     "target": "es6",
     "lib": ["es6"],
-    "strict": true
+    "strict": true,
+    "allowJs": true
   }
 }
