--- a/TS-forBlockchain/typechain/package.json
+++ b/TS-forBlockchain/typechain/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.10.7",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
