--- a/graphql-client/package.json
+++ b/graphql-client/package.json
@@ -9,7 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sass": "^1.83.4",
+    "styled-components": "^6.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
